@@ -1,3 +1,8 @@
+2004-10-18  Bruno Haible  <bruno@clisp.org>
+
+	* compiler.lisp (c-WITHOUT-PACKAGE-LOCK): Call macroexpand-1 instead
+	of macroexpand.
+
 2004-10-17  Bruno Haible  <bruno@clisp.org>
 
 	* defs1.lisp (with-no-package-lock-internal, without-package-lock):
